[project]
name = "basic-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
